--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pulsar: node.js system resource monitor",
   "main": "index.js",
   "scripts": {
-    "install": "bash scripts/install",
+    "install": "node scripts/install.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
